--- a/test/Vintage/src/styles/sass/style.scss
+++ b/test/Vintage/src/styles/sass/style.scss
@@ -1,5 +1,6 @@
 $TNR: 'Times New Roman', serif;
 $TNRI: 'Times New Roman Italic', serif;
+$mainColor: #A86280;
 
 /*CLEARFIX*/
 .clearfix{
@@ -29,10 +30,14 @@ $TNRI: 'Times New Roman Italic', serif;
   border: 1px solid red;
   overflow: hidden;
 }
+body{
+  max-width: 100vw;
+}
 .home{
   width: 100vw;
   height: 100vh;
   position: relative;
+  overflow: hidden;
   &:after{
     content: '';
     position: absolute;
@@ -59,7 +64,10 @@ $TNRI: 'Times New Roman Italic', serif;
   background: white;
 }
 header{
-  //background-color: yellow;
+  z-index: 999;
+  position: fixed;
+  width: 100%;
+  //background-color: #0000fe;
 }
 .logo{
   float: left;
@@ -216,4 +224,52 @@ header{
 }
 .mouse-down__dot{
   fill:#A86280;
+}
+.hidden{
+  display: none !important;
+}
+.menu{
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  left: 0;
+  background-color: white;
+  z-index: 100;
+}
+.menu__list{
+  width: 470px;
+  margin: 142px auto 0;
+  //background-color: yellow;
+}
+.menu__item{
+  border-top: 2px solid #eeeeee;
+  text-align: center;
+  &:first-child{
+    border-top: none;
+  }
+}
+.menu__link{
+  color: rgb(52, 50, 48);
+  font-family: $TNR;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 49px;
+  text-transform: uppercase;
+  text-decoration: none;
+  letter-spacing: 1.1px;
+}
+.social__list{
+  width: 80px;
+  margin: 59px auto 0;
+}
+.social__item{
+  display: inline-block;
+  margin: 0 5px;
+}
+.social__link{
+  color: #343332;
+  text-decoration: none;
+}
+.fa {
+  color: #343332;
 }
