--- a/test/Vintage/src/styles/sass/style.scss
+++ b/test/Vintage/src/styles/sass/style.scss
@@ -1,6 +1,6 @@
 $TNR: 'Times New Roman', serif;
 $TNRI: 'Times New Roman Italic', serif;
-$mainColor: #A86280;
+$mainColor: #a86280;
 
 /*CLEARFIX*/
 .clearfix{
@@ -14,21 +14,6 @@ $mainColor: #A86280;
     display: table;
     clear: both;
   }
-}
-.test{
-  height: 100px;
-  width: 400px;
-  background-color: yellow;
-  border: 1px solid black;
-  margin-top: 40px;
-}
-.test__child{
-  margin-top: 10px;
-  height: 53px;
-  width: 200px;
-  background-color: green;
-  border: 1px solid red;
-  overflow: hidden;
 }
 body{
   max-width: 100vw;
@@ -76,7 +61,7 @@ header{
   height: 21px;
 }
 .logo__image{
-  fill:#A86280;
+  fill:$mainColor;
 }
 .logo__title{
   fill:#010202;
@@ -99,8 +84,8 @@ header{
 .menu-link__image{
   width: 23px;
   height: 18px;
-  fill: #A86280;
-  stroke: #A86280;
+  fill: $mainColor;
+  stroke: $mainColor;
   margin: -2px 0 0 10px;
   vertical-align: top;
 }
@@ -117,7 +102,7 @@ header{
     font-family: FontAwesome;
     content: "\f107";
     font-size: 15px;
-    color: #A86280;
+    color: $mainColor;
     transition: transform 0.25s ease-in-out;
   }
   &:hover .languages__item{
@@ -133,20 +118,25 @@ header{
   display: none;
   float: none;
   width: 30px;
+  height: 15px;
   text-align: center;
-  margin: 0;
+  margin: 5px 0 0 0;
   &:first-child{
     display: block;
+    margin: 0;
   }
   &:hover{
     & .languages__link{
-      color: #a86280;
+      color: $mainColor;
     }
   }
 }
 .languages__link{
   @extend .menu-link;
-  margin: 0;
+  margin: px 0 0 0;
+  &:first-child{
+    margin: 0;
+  }
 }
 .home__title{
   clear: both;
@@ -154,7 +144,7 @@ header{
   width: 60%;
   max-width: 768px;
   margin: 223px auto 0;
-  color: #A86280;
+  color: $mainColor;
   font-family: $TNR;
   font-size: 40px;
   font-weight: 400;
@@ -224,12 +214,12 @@ header{
   stroke-width:2;
 }
 .mouse-down__border--pink{
-  stroke: #A86280;
+  stroke: $mainColor;
   stroke-dasharray: 55;
   stroke-dashoffset: 55;
 }
 .mouse-down__dot{
-  fill:#A86280;
+  fill:$mainColor;
 }
 .hidden{
   display: none !important;
@@ -263,6 +253,9 @@ header{
   text-transform: uppercase;
   text-decoration: none;
   letter-spacing: 1.1px;
+  &:hover{
+    color: $mainColor;
+  }
 }
 .social__list{
   width: 80px;
@@ -278,6 +271,9 @@ header{
 }
 .fa {
   color: #343332;
+  &:hover{
+    color: $mainColor;
+  }
 }
 .languages--open-menu{
   float: none;
@@ -302,6 +298,6 @@ header{
     display: inline-block;
   }
   & .active{
-    color: #a86280;
+    color: $mainColor;
   }
 }
