--- a/test/Vintage Car/src/menu/__item/menu__item.scss
+++ b/test/Vintage Car/src/menu/__item/menu__item.scss
@@ -2,6 +2,7 @@
   vertical-align: middle;
   float: left;
   margin: 0 95px 0 0;
+  height: 70px;
   line-height: 75px;
   &:nth-child(even){
     float: right;
