create some animation on hover

--- a/test/Vintage Car/src/car/car__link/car__link.scss
+++ b/test/Vintage Car/src/car/car__link/car__link.scss
@@ -7,4 +7,8 @@
   font-weight: 600;
   line-height: 21px;
   text-decoration: none;
+  transition: transform 0.5s;
+  &:hover{
+    transform: scale(1.3);
+  }
 }
