--- a/test/Vintage Car/src/menu/__link/menu__link.scss
+++ b/test/Vintage Car/src/menu/__link/menu__link.scss
@@ -5,4 +5,8 @@
   font-weight: 400;
   text-decoration: none;
   letter-spacing: -0.2px;
+  transition: color 0.5s;
+  &:hover{
+    color: white;
+  }
 }
