create responsive for 1024<x<1280

--- a/test/Vintage Car/src/footer/__info/footer__info.scss
+++ b/test/Vintage Car/src/footer/__info/footer__info.scss
@@ -4,3 +4,11 @@
   border-bottom: 1px solid white;
   background: url(../img/footer-background.png);
 }
+
+@media screen and (max-width: 1279px) {
+  .footer__info{
+    height: auto;
+    background: url(../img/footer-background.png) center center;
+    background-size: cover;
+  }
+}
