--- a/test/Vintage Car/src/footer/__description/_about/footer__description_about.scss
+++ b/test/Vintage Car/src/footer/__description/_about/footer__description_about.scss
@@ -1,4 +1,14 @@
 .footer__description_about{
   width: 380px;
-  float: left;
+  display: inline-block;
+  vertical-align: top;
+}
+
+@media screen and (max-width: 1279px) {
+  .footer__description_about{
+    width: 500px;
+    & p{
+      white-space: normal;
+    }
+  }
 }
