--- a/test/Vintage Car/src/footer/__description/_contact-us/footer__description_contact-us.scss
+++ b/test/Vintage Car/src/footer/__description/_contact-us/footer__description_contact-us.scss
@@ -1,5 +1,15 @@
 .footer__description_contact-us{
   width: 220px;
-  margin-left: 98px;
-  float: left;
+  margin-left: 94px;
+  display: inline-block;
+  vertical-align: top;
+
+
+}
+
+@media screen and (max-width: 1279px) {
+  .footer__description_contact-us{
+    margin-left: 0;
+    display: block;
+  }
 }
