--- a/test/Vintage Car/src/menu/__item/menu__item.scss
+++ b/test/Vintage Car/src/menu/__item/menu__item.scss
@@ -9,3 +9,12 @@
     margin: 0 0 0 95px;
   }
 }
+
+@media screen and (max-width: 1279px){
+  .menu__item{
+    margin: 0 45px 0 0;
+    &:nth-child(even){
+      margin: 0 0 0 45px;
+    }
+  }
+}
