--- a/test/Vintage Car/src/read-more/__description/read-more__description.scss
+++ b/test/Vintage Car/src/read-more/__description/read-more__description.scss
@@ -3,3 +3,10 @@
   background: url(../img/read-more-background.png) center center;
   background-size: cover;
 }
+
+@media screen and (max-width: 1279px){
+  .read-more__description{
+    height: 600px;
+    background: url(../img/read-more-background.png) 40% center;
+  }
+}
