--- a/test/Vintage Car/src/read-more/__title/read-more__title.scss
+++ b/test/Vintage Car/src/read-more/__title/read-more__title.scss
@@ -7,3 +7,9 @@
   line-height: 21px;
   font-size: 48px;
 }
+
+@media screen and (max-width: 1279px){
+  .read-more__title{
+    margin: 145px 0 0 182px;
+  }
+}
