--- a/test/Vintage Car/src/gallery/__wrapper/gallery__wrapper.scss
+++ b/test/Vintage Car/src/gallery/__wrapper/gallery__wrapper.scss
@@ -5,8 +5,12 @@
 
 @media screen and (max-width: 1279px){
   .gallery__wrapper{
-    height: 168px;
     width: 874px;
-    margin: 72px auto 0;
+  }
+}
+
+@media screen and (max-width: 1023px){
+  .gallery__wrapper{
+    width: 577px;
   }
 }
