--- a/test/Vintage Car/src/read-more/__item/read-more__item.scss
+++ b/test/Vintage Car/src/read-more/__item/read-more__item.scss
@@ -6,3 +6,11 @@
     margin-right: 0;
   }
 }
+
+@media screen and (max-width: 1023px) {
+  .read-more__item {
+    display: inline-block;
+    margin: 0;
+    vertical-align: top;
+  }
+}
