create responsive for <480

--- a/test/Vintage Car/src/footer/__copyright-text/footer__copyright-text.scss
+++ b/test/Vintage Car/src/footer/__copyright-text/footer__copyright-text.scss
@@ -5,4 +5,14 @@
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0;
+  white-space: pre-line;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__copyright-text{
+    font-size: 12px;
+    line-height: 16px;
+    text-align: center;
+    white-space: normal;
+  }
 }
