--- a/test/Vintage Car/src/footer/__description/_contact-us/footer__description_contact-us.scss
+++ b/test/Vintage Car/src/footer/__description/_contact-us/footer__description_contact-us.scss
@@ -13,3 +13,9 @@
     display: block;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .footer__description_contact-us{
+    width: 100%;
+  }
+}
