--- a/test/Vintage Car/src/read-more/__list/read-more__list.scss
+++ b/test/Vintage Car/src/read-more/__list/read-more__list.scss
@@ -4,3 +4,9 @@
   font-size: 0;
   text-align: center;
 }
+
+@media screen and (max-width: 767px) {
+  .read-more__list{
+    margin-top: 20px;
+  }
+}
