--- a/test/Vintage Car/src/social/__item/social__item.scss
+++ b/test/Vintage Car/src/social/__item/social__item.scss
@@ -3,3 +3,9 @@
   margin-right: 16px;
   display: inline-block;
 }
+
+@media screen and (max-width: 767px) {
+  .social__item{
+    margin-right: 10px;
+  }
+}
