--- a/test/Vintage Car/src/footer/__social/footer__social.scss
+++ b/test/Vintage Car/src/footer/__social/footer__social.scss
@@ -12,3 +12,10 @@
     margin-left: 0;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .footer__social{
+    position: relative;
+    display: block;
+  }
+}
