--- a/test/Vintage Car/src/header/__logo/header__logo.scss
+++ b/test/Vintage Car/src/header/__logo/header__logo.scss
@@ -3,11 +3,18 @@
   top: 2px;
   left: calc(50% - 175px);
   z-index: 999;
-  transition: left 0.3s;
+  transition: opacity, left 0.3s;
 }
 
 @media screen and (max-width: 1023px) {
   .header__logo{
     left: 16px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header__logo{
+    top: 10px;
+    width: 130px;
   }
 }
