--- a/test/Vintage Car/src/read-more/__description-text/read-more__description-text.scss
+++ b/test/Vintage Car/src/read-more/__description-text/read-more__description-text.scss
@@ -3,3 +3,9 @@
   font-size: 14px !important;
   margin-top: 21px !important;
 }
+
+@media screen and (max-width: 767px) {
+  .read-more__description-text{
+    margin: 21px 0 50px 0 !important;
+  }
+}
