--- a/test/Vintage Car/src/read-more/__logo/read-more__logo.scss
+++ b/test/Vintage Car/src/read-more/__logo/read-more__logo.scss
@@ -4,3 +4,13 @@
   width: 147px;
   margin-top: -15px;
 }
+
+@media screen and (max-width: 767px) {
+  .read-more__logo{
+    float: none;
+    display: inline-block;
+    width: 50px;
+    margin-top: 50px;
+    vertical-align: middle;
+  }
+}
