--- a/test/Vintage Car/src/read-more/__subtitle/read-more__subtitle.scss
+++ b/test/Vintage Car/src/read-more/__subtitle/read-more__subtitle.scss
@@ -4,3 +4,10 @@
   margin-top: 32px !important;
   letter-spacing: 0.1px;
 }
+
+@media screen and (max-width: 767px) {
+  .read-more__subtitle{
+    margin: 32px 0 0 0 !important;
+    width: 100%;
+  }
+}
