--- a/test/Vintage Car/src/read-more/read-more.scss
+++ b/test/Vintage Car/src/read-more/read-more.scss
@@ -10,3 +10,11 @@
     background-color: rgba(83, 68, 73, 0.7);
   }
 }
+
+@media screen and (max-width: 767px) {
+  .read-more{
+    &:before{
+      display: none;
+    }
+  }
+}
