--- a/test/Vintage Car/src/slider/__link/slider__link.scss
+++ b/test/Vintage Car/src/slider/__link/slider__link.scss
@@ -5,6 +5,7 @@
 }
 .slider__link{
   position: absolute;
+  z-index: 999;
   display: inline-block;
   height: 67px;
   top: 0;
@@ -20,5 +21,23 @@
   }
   & img{
     width: 30px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .slider__link{
+    opacity: 1;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .slider__link {
+    height: 36px;
+    & img{
+      width: 16px;
+    }
+  }
+  .slider__arrow{
+    top: calc(50% - 18px);
   }
 }
